# FluxMind

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  workspace.toml
bases/fluxmind/api/: app.py  deps.py
bases/fluxmind/events_consumer/: main.py
bases/fluxmind/migrations/: env.py
bases/fluxmind/migrations/versions/: 0001_initial_conversations.py  0002_conversation_analytics.py
bases/fluxmind/worker/: main.py
components/fluxmind/analytics/: __init__.py  service.py
components/fluxmind/conversation/: __init__.py  service.py
components/fluxmind/database/: __init__.py  analytics_repository.py  conversation_repository.py  models.py  session.py
components/fluxmind/domain_core/: __init__.py  events.py  factory.py  models.py
components/fluxmind/jwt/: __init__.py  dependencies.py  exceptions.py  token.py
components/fluxmind/llm/: __init__.py  interfaces.py  ollama_client.py
components/fluxmind/mq/: __init__.py  interfaces.py  kafka.py
components/fluxmind/platform/: settings.py
development/infra/: docker-compose.ollama.yml
projects/fluxmind-api/: main.py  pyproject.toml
projects/fluxmind-db-migrations/: main.py  pyproject.toml
projects/fluxmind-events-consumer/: main.py  pyproject.toml
projects/fluxmind-worker/: main.py  pyproject.toml
tests/bases/fluxmind/events_consumer/: test_message_flow.py
