[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fluxmind"
version = "0.1.0"
description = "FluxMind event-driven LLM chatbot monorepo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.123.5",
    "uvicorn[standard]>=0.38.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.12.0",
    "SQLAlchemy[asyncio]>=2.0.44",
    "asyncpg>=0.31.0",
    "alembic>=1.17.2",
    "aiokafka>=0.12.0",
    "python-jose[cryptography]>=3.3.0",
    "psycopg2-binary>=2.9.11",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "polylith-cli>=1.40.0",
    "ruff>=0.8.0",
]

[tool.uv]
managed = true

[tool.uv.workspace]
members = ["projects/*"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
dev-mode-dirs = ["components", "bases", "development", "."]

[tool.polylith.bricks]
"bases/fluxmind/api" = "fluxmind/api"
"bases/fluxmind/events_consumer" = "fluxmind/events_consumer"
"bases/fluxmind/migrations" = "fluxmind/migrations"
"bases/fluxmind/worker" = "fluxmind/worker"
"components/fluxmind/analytics" = "fluxmind/analytics"
"components/fluxmind/conversation" = "fluxmind/conversation"
"components/fluxmind/database" = "fluxmind/database"
"components/fluxmind/domain_core" = "fluxmind/domain_core"
"components/fluxmind/jwt" = "fluxmind/jwt"
"components/fluxmind/llm" = "fluxmind/llm"
"components/fluxmind/mq" = "fluxmind/mq"
"components/fluxmind/platform" = "fluxmind/platform"

[tool.ruff]
exclude = [
    ".git",
    ".github",
    "__pycache__",
    ".mypy_cache",
    ".ruff_cache",
    "dist",
    ".venv",
    "./development/*.py",
]
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
