[project]
name = "fluxmind-db-migrations"
version = "0.1.0"
description = "FluxMind database migrations"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "fluxmind/migrations",
    "fluxmind/database",
]

