[project]
name = "fluxmind-events-consumer"
version = "0.1.0"
description = "FluxMind events consumer service"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "fluxmind/events_consumer",
    "fluxmind/conversation",
    "fluxmind/database",
    "fluxmind/llm",
    "fluxmind/mq",
    "fluxmind/analytics",
    "fluxmind/platform",
    "fluxmind/domain_core",
]

