[project]
name = "fluxmind-worker"
version = "0.1.0"
description = "FluxMind worker service"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "fluxmind/worker",
    "fluxmind/conversation",
    "fluxmind/database",
    "fluxmind/mq",
    "fluxmind/platform",
    "fluxmind/domain_core",
]

